--- a/tributeact.html
+++ b/tributeact.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="section-2">
-        <a href="Index.Html">HOME</a>
+        <a href="index.html">HOME</a>
         <a href="tributeact.html">ACTIVITY</a>
         <a href="resumenamo.html">ABOUT</a>
         <a href="contact.html">CONTACT</a>
