--- a/tributeact.html
+++ b/tributeact.html
@@ -23,7 +23,7 @@
                     <div class="info">
                         <h1 class="artist">Ed Sheeran</h1>
                         <p class="status">English Singer<br>Song Writer</p>
-                        <p class="about">Edward Christopher Sheeran MBE ( born 17 February 1991) is an English singer-songwriter. Born in Halifax, West Yorkshire, and raised in Framlingham, Suffolk, he began writing songs around the age of eleven. In early 2011, Sheeran independently released the extended play No. 5 Collaborations Project. He signed with Asylum Records the same year.</p>
+                        <p class="about-shernan">Edward Christopher Sheeran MBE ( born 17 February 1991) is an English singer-songwriter. Born in Halifax, West Yorkshire, and raised in Framlingham, Suffolk, he began writing songs around the age of eleven. In early 2011, Sheeran independently released the extended play No. 5 Collaborations Project. He signed with Asylum Records the same year.</p>
                      </div>
             </div>
             <!--Tribute Body-->
