--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,7 @@
 
     <div class="container">
         <img src="images/angilo.jpg" alt="" class="me">
-        <img src="images/norm.jpg" alt="" class="me-2">
+        <img src="images/norm.jpg" alt="" class="me">
         <div class="info">
             <ul>
                 <li><a href="https://www.instagram.com/princekun_13/"><i class="fa-brands fa-instagram" style="color: #d3cd12"></i></a></li>
@@ -27,7 +27,7 @@
                 
             </ul>
         </div>
-        <div class="info-2">
+        <div class="info">
             <ul>
                 <li><a href="https://www.instagram.com/iamqueennormie_jane/"><i class="fa-brands fa-instagram" style="color: #d3cd12"></i></a></li>
                 <li><a href="https://web.facebook.com/profile.php?id=100080674020452"><i class="fa-brands fa-facebook" style="color: #d3cd12"></i></a></li>
