--- a/contact.html
+++ b/contact.html
@@ -16,26 +16,23 @@
         <a href="contact.html">CONTACT</a>
     </div>
 
-    <div class="container">
-        <img src="images/angilo.jpg" alt="" class="me">
-        <div class="info">
+    <div class="box">
+        <div class="my-contact">
+            <img src="images/angilo.jpg" alt="" class="me-myself">
+            <h2 class="my-name">Angilo Prince M. Inoc</h2>
             <ul>
-                <li><a href="https://www.instagram.com/princekun_13/"><i class="fa-brands fa-instagram" style="color: #d3cd12"></i></a></li>
-                <li><a href="https://web.facebook.com/profile.php?id=100082931113796"><i class="fa-brands fa-facebook" style="color: #d3cd12"></i></a></li>
-                <li><a href="https://github.com/NormiePrince"><i class="fa-brands fa-github" style="color: #d3cd12;"></i></a></li>
-                
+                <li><a href="https://www.instagram.com/princekun_13/?fbclid=IwAR0UBiMFZ9-KyOe3o_w7WK4T0wmrLX4_nxZNH-Kw2l3pFOEIQ5Y-Ou7kL9k"><i class="fa-brands fa-instagram" style="color: #d3cd12"></i></a></li>
+                <li><a href="https://www.facebook.com/profile.php?id=100082931113796&_rdc=1&_rdr"><i class="fa-brands fa-facebook" style="color: #d3cd12"></i></a></li>
+                <li> <a href="https://github.com/NormiePrince?fbclid=IwAR0-3pFuNjlbqyS4lyUBWishWOFlxxLc35PCSurGB00PY2EYxuUtTSEv-rE"><i class="fa-brands fa-github" style="color: #d3cd12;"></i></a></li>
+            </ul>
+            <img src="images/norm.jpg" alt="" class="me-myself">
+            <h2 class="my-name">Normie Jane Coronel</h2>
+            <ul>
+                <li><a href="https://www.instagram.com/iamqueennormie_jane/?fbclid=IwAR0AzgsvBlzBL8_MP7iqPcduL8t9t3dhsSeDWOXXNNsRWc9OrxM8PauO-lc"><i class="fa-brands fa-instagram" style="color: #d3cd12"></i></a></li>
+                <li><a href="https://www.facebook.com/profile.php?id=100080674020452&_rdc=1&_rdr"><i class="fa-brands fa-facebook" style="color: #d3cd12"></i></a></li>
+                <li> <a href="https://github.com/NormiePrince?fbclid=IwAR0-3pFuNjlbqyS4lyUBWishWOFlxxLc35PCSurGB00PY2EYxuUtTSEv-rE"><i class="fa-brands fa-github" style="color: #d3cd12;"></i></a></li>
             </ul>
         </div>
-        <img src="images/norm.jpg" alt="" class="me">
-        <div class="info">
-            <ul>
-                <li><a href="https://www.instagram.com/iamqueennormie_jane/"><i class="fa-brands fa-instagram" style="color: #d3cd12"></i></a></li>
-                <li><a href="https://web.facebook.com/profile.php?id=100080674020452"><i class="fa-brands fa-facebook" style="color: #d3cd12"></i></a></li>
-                <li><a href="https://github.com/NormiePrince"><i class="fa-brands fa-github" style="color: #d3cd12;"></i></a></li>
-                
-            </ul>
-        </div>
-
     </div>
 </body>
 </html>
